tests/badopts.srv
; pos=fail err=3 warn=0 dummycrprotection=
#units save restore restore restore ; `restore` without corresponding `save`
